--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.17"
-    
-   
+    "@types/express": "^4.17.17",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.13",
+    "body-parser": "^1.20.2",
     "dotenv-safe": "^8.2.0",
     "express": "^4.18.2",
     "mongodb": "^5.5.0",
