--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
+    "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.13",
     "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
     "dotenv-safe": "^8.2.0",
     "express": "^4.18.2",
     "mongodb": "^5.5.0",
