--- a/package.json
+++ b/package.json
@@ -11,26 +11,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/cookie-parser": "^1.4.3",
-    "@types/express": "^4.17.17",
-    "@types/lodash": "^4.14.195",
-    "@types/mongoose": "^5.11.97",
     "@types/body-parser": "^1.19.2",
     "@types/compression": "^1.7.2",
-    "@types/cors": "^2.8.13"
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/lodash": "^4.14.195",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
-    "cors": "^2.8.5",
+    "@types/mongoose": "^5.11.97",
     "body-parser": "^1.20.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv-safe": "^8.2.0",
     "express": "^4.18.2",
+    "latest": "^0.2.0",
     "lodash": "^4.17.21",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.1",
-    "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "nodemon": "^2.0.22"
   }
 }
